chore, build xevent(1) tool with version info

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -72,6 +72,7 @@ BUILT_SOURCES += imp.yucc
 
 bin_PROGRAMS += xevent
 xevent_SOURCES = xevent.c xevent.yuck
+xevent_SOURCES += version.c version.h
 xevent_CPPFLAGS = $(AM_CPPFLAGS)
 xevent_CPPFLAGS += -D_GNU_SOURCE
 BUILT_SOURCES += xevent.yucc
