minor, import thours(1) tool

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -105,6 +105,13 @@ xevent_CPPFLAGS = $(AM_CPPFLAGS)
 xevent_CPPFLAGS += -D_GNU_SOURCE
 BUILT_SOURCES += xevent.yucc
 
+bin_PROGRAMS += thours
+thours_SOURCES = thours.c thours.yuck
+thours_SOURCES += version.c version.h
+thours_CPPFLAGS = $(AM_CPPFLAGS)
+thours_CPPFLAGS += -D_GNU_SOURCE
+BUILT_SOURCES += thours.yucc
+
 
 ## version rules
 version.c: version.c.in $(top_builddir)/.version
