chore, rename axp(1) to accsum(1)

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -135,19 +135,19 @@ sea_LDADD = libdfp.a
 sea_LDADD += -ldecimal
 BUILT_SOURCES += sea.yucc
 
-bin_PROGRAMS += axp
-axp_SOURCES = axp.c axp.yuck
-axp_SOURCES += hash.c hash.h
-axp_SOURCES += version.c version.h
-axp_CPPFLAGS = $(AM_CPPFLAGS)
-axp_CPPFLAGS += -D__STDC_WANT_DEC_FP__
-axp_CPPFLAGS += $(dfp754_CFLAGS)
-axp_CPPFLAGS += -DHAVE_VERSION_H
-axp_LDFLAGS = $(AM_LDFLAGS)
-axp_LDFLAGS += $(dfp754_LIBS)
-axp_LDADD = libdfp.a
-axp_LDADD += -ldecimal
-BUILT_SOURCES += axp.yucc
+bin_PROGRAMS += accsum
+accsum_SOURCES = accsum.c accsum.yuck
+accsum_SOURCES += hash.c hash.h
+accsum_SOURCES += version.c version.h
+accsum_CPPFLAGS = $(AM_CPPFLAGS)
+accsum_CPPFLAGS += -D__STDC_WANT_DEC_FP__
+accsum_CPPFLAGS += $(dfp754_CFLAGS)
+accsum_CPPFLAGS += -DHAVE_VERSION_H
+accsum_LDFLAGS = $(AM_LDFLAGS)
+accsum_LDFLAGS += $(dfp754_LIBS)
+accsum_LDADD = libdfp.a
+accsum_LDADD += -ldecimal
+BUILT_SOURCES += accsum.yucc
 
 bin_PROGRAMS += xevent
 xevent_SOURCES = xevent.c xevent.yuck
