--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -40,4 +40,9 @@ TESTS += accsum_04.clit
 EXTRA_DIST += test1.acc
 EXTRA_DIST += test2.acc
 
+TESTS += quodist_01.clit
+TESTS += quodist_02.clit
+TESTS += quodist_03.clit
+EXTRA_DIST += EURUSD
+
 ## Makefile.am ends here
