--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_script:
   - autoreconf -vfi
 
 script:
-  - ./configure || { cat config.log; false; }
+  - ./configure dfp754_LIBS=-ldfp || { cat config.log; false; }
   - make clean
   - make all
   - make check || { cat test/test-suite.log; false; }
