chore, target ubuntu trusty

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,19 @@
 language: c
+dist: trusty
+sudo: required
 
 os:
   - linux
 
 compiler:
   - gcc
+
+before_install:
+  - sudo apt-get -qq update
+
+install:
+  - sudo apt-get install -qq libdfp1
+  - sudo apt-get install -qq libdfp-dev
 
 before_script:
   - autoreconf -vfi
@@ -25,9 +34,3 @@ branches:
 notifications:
   email:
     - devel@fresse.org
-
-addons:
-  apt:
-    packages:
-      - libdfp1
-      - libdfp-dev
