test, adapt regression to test snapshot output when no innovations have been observed in the interval

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -50,7 +50,8 @@ TESTS += snap_06.clit
 TESTS += snap_07.clit
 TESTS += snap_08.clit
 EXTRA_DIST += EURUSD
-EXTRA_DIST += stmp
+EXTRA_DIST += 1.stmp
+EXTRA_DIST += 2.stmp
 
 TESTS += mid_01.clit
 TESTS += mid_02.clit
