--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ build:
     - apt update && apt -y install make autoconf automake
   script:
     - autoreconf -vfi
-    - ./configure LIBS=-lm
+    - ./configure LIBS="-lm -ldecnumber"
     - make
     - make check
     - make distcheck
