--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,11 @@
 language: c
 dist: trusty
-sudo: required
 
 os:
   - linux
 
 compiler:
   - gcc
-
-before_install:
-  - sudo apt-get -qq update
-
-install:
-  - sudo apt-get install -qq libdfp1
-  - sudo apt-get install -qq libdfp-dev
 
 before_script:
   - autoreconf -vfi
@@ -23,13 +15,12 @@ script:
   - make clean
   - make all
   - make check || { cat test/test-suite.log; false; }
-  - make distcheck
+  - make distcheck || { cat ttt-*/_build/test/test-suite.log; false; }
 
 ## whitelist
 branches:
   only:
     - master
-    - next
 
 notifications:
   email:
