chore, try without libdecnumber, modern gcc with -std=gnu11 should have dfp754 support

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ build:
     - apt update && apt -y install make autoconf automake
   script:
     - autoreconf -vfi
-    - ./configure LIBS="-lm -ldecnumber"
+    - ./configure
     - make
     - make check
     - make distcheck
