--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -46,9 +46,15 @@ TESTS += accsum_03.clit
 TESTS += accsum_04.clit
 TESTS += accsum_05.clit
 TESTS += accsum_06.clit
+TESTS += accsum_07.clit
+TESTS += accsum_08.clit
+TESTS += accsum_09.clit
+TESTS += accsum_10.clit
 EXTRA_DIST += test1.acc
 EXTRA_DIST += test2.acc
 EXTRA_DIST += test3.acc
+EXTRA_DIST += test4.acc
+EXTRA_DIST += test5.acc
 
 TESTS += snap_01.clit
 TESTS += snap_02.clit
