minor, migrate accrpl(1) to tv.[ch] interface

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -160,6 +160,7 @@ BUILT_SOURCES += accsum.yucc
 
 bin_PROGRAMS += accrpl
 accrpl_SOURCES = accrpl.c accrpl.yuck
+accrpl_SOURCES += tv.c tv.h
 accrpl_SOURCES += version.c version.h
 accrpl_CPPFLAGS = $(AM_CPPFLAGS)
 accrpl_CPPFLAGS += $(dfp754_CFLAGS)
