minor, migrate accsum(1) to tv.[ch] interface

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -149,6 +149,7 @@ BUILT_SOURCES += sea.yucc
 
 bin_PROGRAMS += accsum
 accsum_SOURCES = accsum.c accsum.yuck
+accsum_SOURCES += tv.c tv.h
 accsum_SOURCES += version.c version.h
 accsum_CPPFLAGS = $(AM_CPPFLAGS)
 accsum_CPPFLAGS += $(dfp754_CFLAGS)
