minor, migrate snap(1) to tv.[ch] interface

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -42,6 +42,7 @@ BUILT_SOURCES += candle.yucc
 
 bin_PROGRAMS += snap
 snap_SOURCES = snap.c snap.yuck
+snap_SOURCES += tv.c tv.h
 snap_SOURCES += version.c version.h
 snap_CPPFLAGS = $(AM_CPPFLAGS)
 snap_CPPFLAGS += -DHAVE_VERSION_H
