minor, migrate mid(1) to tv.[ch] interface

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -118,6 +118,7 @@ BUILT_SOURCES += imp.yucc
 
 bin_PROGRAMS += mid
 mid_SOURCES = mid.c mid.yuck
+mid_SOURCES += tv.c tv.h
 mid_SOURCES += version.c version.h
 mid_CPPFLAGS = $(AM_CPPFLAGS)
 mid_CPPFLAGS += $(dfp754_CFLAGS)
