--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -82,18 +82,18 @@ loghist_LDFLAGS = $(AM_LDFLAGS)
 loghist_LDADD = -lm
 BUILT_SOURCES += loghist.yucc
 
-bin_PROGRAMS += sex
-sex_SOURCES = sex.c sex.yuck
-sex_SOURCES += hash.c hash.h
-sex_SOURCES += tv.c tv.h
-sex_SOURCES += version.c version.h
-sex_CPPFLAGS = $(AM_CPPFLAGS)
-sex_CPPFLAGS += $(dfp754_CFLAGS)
-sex_CPPFLAGS += -DHAVE_VERSION_H
-sex_LDFLAGS = $(AM_LDFLAGS)
-sex_LDFLAGS += $(dfp754_LIBS)
-sex_LDADD = libmydfp.a
-BUILT_SOURCES += sex.yucc
+bin_PROGRAMS += sex1
+sex1_SOURCES = sex1.c sex1.yuck
+sex1_SOURCES += hash.c hash.h
+sex1_SOURCES += tv.c tv.h
+sex1_SOURCES += version.c version.h
+sex1_CPPFLAGS = $(AM_CPPFLAGS)
+sex1_CPPFLAGS += $(dfp754_CFLAGS)
+sex1_CPPFLAGS += -DHAVE_VERSION_H
+sex1_LDFLAGS = $(AM_LDFLAGS)
+sex1_LDFLAGS += $(dfp754_LIBS)
+sex1_LDADD = libmydfp.a
+BUILT_SOURCES += sex1.yucc
 
 bin_PROGRAMS += eva
 eva_SOURCES = eva.c eva.yuck
