minor, rename snap(1) to snap1(1), not to clash with Ubuntu's snappy

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -41,15 +41,15 @@ candle_LDFLAGS += $(dfp754_LIBS)
 candle_LDADD = libmydfp.a
 BUILT_SOURCES += candle.yucc
 
-bin_PROGRAMS += snap
-snap_SOURCES = snap.c snap.yuck
-snap_SOURCES += tv.c tv.h
-snap_SOURCES += version.c version.h
-snap_CPPFLAGS = $(AM_CPPFLAGS)
-snap_CPPFLAGS += -DHAVE_VERSION_H
-snap_LDFLAGS = $(AM_LDFLAGS)
-snap_LDADD = libmydfp.a
-BUILT_SOURCES += snap.yucc
+bin_PROGRAMS += snap1
+snap1_SOURCES = snap1.c snap1.yuck
+snap1_SOURCES += tv.c tv.h
+snap1_SOURCES += version.c version.h
+snap1_CPPFLAGS = $(AM_CPPFLAGS)
+snap1_CPPFLAGS += -DHAVE_VERSION_H
+snap1_LDFLAGS = $(AM_LDFLAGS)
+snap1_LDADD = libmydfp.a
+BUILT_SOURCES += snap1.yucc
 
 bin_PROGRAMS += quodist
 quodist_SOURCES = quodist.c quodist.yuck
