chore, kill snap(1) tool

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -56,14 +56,14 @@ EXTRA_DIST += test3.acc
 EXTRA_DIST += test4.acc
 EXTRA_DIST += test5.acc
 
-TESTS += snap_01.clit
-TESTS += snap_02.clit
-TESTS += snap_03.clit
-TESTS += snap_04.clit
-TESTS += snap_05.clit
-TESTS += snap_06.clit
-TESTS += snap_07.clit
-TESTS += snap_08.clit
+TESTS += align_01.clit
+TESTS += align_02.clit
+TESTS += align_03.clit
+TESTS += align_04.clit
+TESTS += align_05.clit
+TESTS += align_06.clit
+TESTS += align_07.clit
+TESTS += align_08.clit
 EXTRA_DIST += EURUSD
 EXTRA_DIST += 1.stmp
 EXTRA_DIST += 2.stmp
